--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: PXMegaPhone
+name: ArcMegaPhone
 version: '${version}'
 main: hy.pxmegaphone.PXMegaPhone
-api-version: '1.20'
+api-version: '1.16'
 
 commands:
   mp:
